k8s/whispr/preprod/mobile-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobile-web
  namespace: whispr-preprod
spec:
  type: ClusterIP
  selector:
    app: mobile-web
  ports:
    - name: http
      port: 3020
      targetPort: 3020
